[package]
name = "http_stub"
version = "0.1.0"
authors = ["Nubis <yo@nubis.im>"]
description = """Rust library for writing HTTP integration tests. 
  Create ad-hoc web servers, make assertions on the request 
  and send back your own response."""
repository = "https://github.com/bitex-la/rust-http-stub"
keywords = ["http", "test", "spec", "api", "web"]
license = "WTFPL"

[dependencies]
hyper = "^0.8"
serde = "^0.7"
serde_json = "0.7.0"
serde_macros = "0.7.2"
regex = "0.1.6"
