[package]
name = "http_stub"
version = "0.1.1"
authors = ["Nubis <yo@nubis.im>"]
description = """
  Actual web servers,
  testing the full stack.
  Assert on the request,
  and send a response back."""
repository = "https://github.com/bitex-la/rust-http-stub"
keywords = ["http", "test", "spec", "api", "web"]
license = "WTFPL"

[dependencies]
hyper = "^0.8"
regex = "0.1.6"
